@startuml

title __BANKADAO1's Class Diagram__\n

  namespace dao {
    interface dao.Dao {
    }
  }
  

  namespace dao {
    class dao.KlientDao {
    }
  }
  

  namespace dao {
    class dao.UcetDao {
    }
  }
  

  namespace entity {
    class entity.Klient {
    }
  }
  

  namespace entity {
    class entity.Ucet {
    }
  }
  

  namespace enums {
    enum Narodnost {
    }
  }
  

  namespace enums {
    enum TypUctu {
    }
  }
  

  namespace gui {
    class gui.HlavneOkno {
    }
  }
  

  namespace gui {
    class gui.IconListRenderer {
    }
  }
  

  namespace gui {
    class gui.KlientEdit {
    }
  }
  

  namespace gui {
    class gui.UcetEdit {
    }
  }
  

  namespace gui {
    class gui.UcetOdober {
    }
  }
  

  namespace model {
    class model.KlientModel {
    }
  }
  

  namespace model {
    class model.UcetModel {
    }
  }
  

  namespace org.example {
    class org.example.App {
    }
  }
  

  namespace org.example {
    class org.example.Banka {
    }
  }
  

  namespace service {
    class service.KlientService {
    }
  }
  

  namespace service {
    class service.UcetService {
    }
  }
  

  dao.KlientDao .up.|> dao.Dao
  dao.UcetDao .up.|> dao.Dao
  entity.Klient o-- enums.Narodnost : narodnost
  entity.Ucet o-- entity.Klient : klient
  entity.Ucet o-- enums.TypUctu : typ
  gui.HlavneOkno o-- org.example.Banka : banka
  gui.IconListRenderer -up-|> javax.swing.DefaultListCellRenderer
  gui.KlientEdit -up-|> javax.swing.JDialog
  gui.KlientEdit o-- gui.HlavneOkno : hlavneOkno
  gui.KlientEdit o-- entity.Klient : klient
  gui.UcetEdit -up-|> javax.swing.JDialog
  gui.UcetEdit o-- gui.HlavneOkno : hlavneOkno
  gui.UcetEdit o-- entity.Klient : klient
  gui.UcetEdit o-- entity.Ucet : ucet
  gui.UcetOdober -up-|> javax.swing.JDialog
  gui.UcetOdober o-- org.example.Banka : banka
  gui.UcetOdober o-- gui.HlavneOkno : hlavneOkno
  gui.UcetOdober o-- entity.Klient : klient
  model.KlientModel -up-|> javax.swing.table.AbstractTableModel
  model.UcetModel -up-|> javax.swing.table.AbstractTableModel
  org.example.Banka o-- service.KlientService : klientService
  org.example.Banka o-- service.UcetService : ucetService
  service.KlientService o-- dao.KlientDao : klientDao
  service.UcetService o-- dao.UcetDao : ucetDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
